Bug 124987 - Text Box anchored to page on an RTL page - disappears
Summary: Text Box anchored to page on an RTL page - disappears
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.4 all versions
Hardware: x86-64 (AMD64) All
: medium normal
Assignee: Jonathan Clark
URL:
Whiteboard: target:26.8.0 target:26.2.4
Keywords: bibisected, bisected, regression
: 117938 119712 139246 142966 (view as bug list)
Depends on:
Blocks: RTL-Textbox Regressions-no-off-page-print-drawobj
  Show dependency treegraph
 
Reported: 2019-04-26 19:07 UTC by Zaid Barghouthi
Modified: 2026-05-21 14:27 UTC (History)
11 users (show)

See Also:
Crash report or crash signature:


Attachments
sample file (9.04 KB, application/vnd.oasis.opendocument.text)
2019-05-23 12:06 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Zaid Barghouthi 2019-04-26 19:07:10 UTC
Description:
When anchoring a text-box to page in a Right-to-Left document, the text box doesn't appear in normal view but when exporting to PDF the text appears normally. 

Ubuntu : https://youtu.be/-oWBhi07N6Q
Windows 10 : https://youtu.be/OVPm6TM3HlI

Steps to Reproduce:
1. Create a text-box with some text in it.
2. Enable complex text layout. Tools>Options>Language Settings>Language>Complex text layout: set to Arabic(Jordan) for example.
3. Change page direction to RTL. Format>page>text-orientation: set to Right-to-Left
4. Change textb-box anchor to page. 

Actual Results:
The text and text-box don't appear in normal view

Expected Results:
The text and the text-box to appear normally


Reproducible: Always


User Profile Reset: No



Additional Info:
Comment 1 Dieter 2019-04-27 09:18:49 UTC
I confirm it with

Version: 6.2.3.2 (x64)
Build-ID: aecc05fe267cc68dde00352a451aa867b3b546ac
CPU-Threads: 4; BS: Windows 10.0; UI-Render: GL; VCL: win; 
Gebietsschema: de-DE (de_DE); UI-Sprache: de-DE
Calc: threaded

and also with

Version: 5.4.7.2 (x64)
Build-ID: c838ef25c16710f8838b1faec480ebba495259d0
CPU-Threads: 4; BS: Windows 6.19; UI-Render: GL; 
Gebietsschema: de-DE (de_DE); Calc: CL
Comment 2 Xisco Faulí 2019-05-23 12:06:51 UTC
Created attachment 151626 [details]
sample file

Steps to reproduce:
1. Open attached file
2. Format - Page
3. Change text direction to right-to-left
Comment 3 Xisco Faulí 2019-05-23 12:15:00 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=689cead9e0837dc932e3a4cd765f7d319b529018

author	Michael Stahl <mstahl@redhat.com>	2016-12-06 22:59:40 +0100
committer	Michael Stahl <mstahl@redhat.com>	2016-12-07 14:46:07 +0100
commit 689cead9e0837dc932e3a4cd765f7d319b529018 (patch)
tree cd6cdcd77f017ef1e60ec11556617da5b1c39721
parent b346439637b7d03a3eb1d6e67dfb585b357567f4 (diff)
tdf#91260 svx, sw: don't paint off-page part of drawing object

Bisected with: bibisect-linux-64-5.4

Adding Cc: to Michael Stahl
Comment 4 Regina Henschel 2022-08-15 11:50:20 UTC
duplicate to bug 117938?
Comment 5 BogdanB 2023-12-08 20:57:44 UTC
Also in
Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 9fb3970a1a599eae2447f6746597843434ee758b
CPU threads: 16; OS: Linux 6.2; UI render: default; VCL: gtk3
Locale: ar-JO (ro_RO.UTF-8); UI: en-US
Calc: threaded
Comment 6 Eyal Rozenberg 2024-07-22 08:25:03 UTC
I believe this and 117938 are dupes of each other. 

If that's not the case - can someone please explain the difference? (I asked the same question there.)
Comment 7 u34 2024-07-22 20:31:53 UTC
(In reply to Eyal Rozenberg from comment #6, and to Regina Henschel from comment #4)
> I believe this and 117938 are dupes of each other. 
> 
> If that's not the case - can someone please explain the difference? (I asked
> the same question there.)

As I wrote at bug #117938 comment #30:
+1.
There seem to be a difference in the order of operations, at least for the initial reports. At bug #117938, you set RTL before the object is completed. At bug #124987, it is the other way around. As for another difference, bug #124987, this bug, does not assume you enabled complex text layout in the first place. (Which could be what confused Dieter from bug #117938 comment #1 and bug #117938 comment #3. And now I noticed he also wrote comment #1 for this bug.) Never the less, these differences do not seem to change the outcome of the operations.
Comment 8 Eyal Rozenberg 2024-07-22 20:45:42 UTC
*** Bug 117938 has been marked as a duplicate of this bug. ***
Comment 9 u34 2024-07-22 21:03:58 UTC
(In reply to Eyal Rozenberg from comment #8)
> *** Bug 117938 has been marked as a duplicate of this bug. ***

As bug #117938 has more comments, this bug is missing useful information. Such as bug #117938 comment #23: set object anchor to "page" by shape -> Position and Size, and pick the anchor "To page" there. Or bug #117938 comment #12: A list for behavior of different objects that are anchored to the page.
Comment 10 Eyal Rozenberg 2024-08-03 07:58:21 UTC
Bug still manifests with:

Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 01e6e4303e5a9966f102e0357fe0354a2f74a1c4
CPU threads: 4; OS: Linux 6.6; UI render: default; VCL: gtk3
Locale: en-IL (en_IL); UI: en-US
Comment 11 Jonathan Clark 2026-05-12 12:59:17 UTC
*** Bug 139246 has been marked as a duplicate of this bug. ***
Comment 12 Jonathan Clark 2026-05-12 14:25:44 UTC
*** Bug 119712 has been marked as a duplicate of this bug. ***
Comment 13 Jonathan Clark 2026-05-12 14:26:00 UTC
*** Bug 142966 has been marked as a duplicate of this bug. ***
Comment 14 Jonathan Clark 2026-05-12 14:28:08 UTC
The root cause is an off-by-one error when calculating the clipping rectangles used to localize anchors to a page. Because the clipping rectangles are always 1 twip shorter and narrower than the page, any drawing object with an anchor on the right or bottom edges of the page fail to draw.
Comment 15 u34 2026-05-12 17:07:16 UTC
(In reply to Jonathan Clark from comment #14)
> The root cause is an off-by-one error when calculating the clipping
> rectangles used to localize anchors to a page. Because the clipping
> rectangles are always 1 twip shorter and narrower than the page, any drawing
> object with an anchor on the right or bottom edges of the page fail to draw.
Thank you.
A twip is https://en.wikipedia.org/wiki/Twip.
Comment 16 Commit Notification 2026-05-13 09:03:28 UTC
Jonathan Clark committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/7f1a2f8fa2ce9ddf15f0e32b9faa01d84b60a8bb

tdf#124987 sw: Fixed off-by-one error in draw obj anchor clipping rect

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 17 Commit Notification 2026-05-13 11:21:41 UTC
Jonathan Clark committed a patch related to this issue.
It has been pushed to "libreoffice-26-2":

https://git.libreoffice.org/core/commit/a1ff49c7427b6379c8f9fe1f1585d874cab8ee76

tdf#124987 sw: Fixed off-by-one error in draw obj anchor clipping rect

It will be available in 26.2.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.