tdf#124987 sw: Fixed off-by-one error in draw obj anchor clipping rect

Since tdf#91260, Writer clips drawing objects to pages by checking
whether their anchors are contained by a bounding rectangle. The code
that calculated this rectangle had an off-by-one error causing the
clipping rectangle to always be exactly 1 twip shorter and narrower than
the actual page frame rectangle. As a result, anything with an anchor
position on the right or bottom edge of the screen would fail to render
- including any objects anchored to an RTL page.

Regression from commit 689cead9e0837dc932e3a4cd765f7d319b529018
  Author: Michael Stahl <mstahl@redhat.com>
  Date:   Tue Dec 6 22:59:40 2016 +0100
  tdf#91260 svx, sw: don't paint off-page part of drawing object

Change-Id: Ife6c817f0689ca2b31d22df31f740c30ab548c8c
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/205114
Reviewed-by: Jonathan Clark <jonathan@libreoffice.org>
Tested-by: Jenkins
(cherry picked from commit 7f1a2f8fa2ce9ddf15f0e32b9faa01d84b60a8bb)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/205156
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>