vcl/CppunitTest_vcl_text.mk
@@ -16,6 +16,7 @@ $(eval $(call gb_CppunitTest_set_include,vcl_text,\
 
 $(eval $(call gb_CppunitTest_add_exception_objects,vcl_text, \
 	vcl/qa/cppunit/canvasbitmaptest \
+	vcl/qa/cppunit/canvastoolstest \
 	vcl/qa/cppunit/complextext \
 	vcl/qa/cppunit/justificationdata \
 	vcl/qa/cppunit/text \
